--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-paginate": "^1.0.2",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,6 +36,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-paginate": "^1.0.4",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
